--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
           <div class="navbar-brand">
             <a href="/" class="navbar-item logo-link focus-visible">
-              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
+              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg" alt="EPAM logo">
             </a>
             <button class="navbar-burger burger" data-target="navbarMenu">
               <span></span>
@@ -181,9 +181,9 @@
       <div class="is-5 title">Fifth level</div>
       <p>Aliquam sagittis rhoncus vulputate. Cras non luctus sem, sed tincidunt ligula. Vestibulum at nunc elit. Praesent aliquet ligula mi, in luctus elit volutpat porta. Phasellus molestie diam vel nisi sodales, a eleifend augue laoreet. Sed nec eleifend justo. Nam et sollicitudin odio.</p>
       <figure>
-        <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg">
-        <img src="./img/photo-1574281852611-b2f04c86a520.jpg">
-        <img src="./img/photo-1575023615386-1554d895d09d.jpg">
+        <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg" alt="forest through a train window">
+        <img src="./img/photo-1574281852611-b2f04c86a520.jpg" alt="black-and-white closeup photo of hands with rings">
+        <img src="./img/photo-1575023615386-1554d895d09d.jpg" alt="christmass decorations on a table">
         <figcaption>
           Figure 1: Some beautiful placeholders
         </figcaption>
@@ -289,7 +289,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-1.jpg" class="modal-button" data-target="modal-image1">
+                  <img src="./img/tab-1.jpg" alt="closeup of a person playing gaming console" class="modal-button" data-target="modal-image1">
                 </div>
               </div>
               <div class="card-content">
@@ -305,7 +305,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-2.jpg">
+                  <img src="./img/tab-2.jpg" alt="bird's eye view of a tropical beach">
                 </div>
               </div>
               <div class="card-content">
@@ -322,7 +322,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-3.jpg" class="modal-button" data-target="modal-image2">
+                  <img src="./img/tab-3.jpg" alt="shore with mountains on the horizon" class="modal-button" data-target="modal-image2">
                 </div>
               </div>
               <div class="card-content">
@@ -422,7 +422,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/web-access-summit-eventbrite.jpg">
+              <img src="./img/web-access-summit-eventbrite.jpg" alt="">
             </div>
             <p class="title">New York</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -432,7 +432,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/access.jpg">
+              <img src="./img/access.jpg" alt="">
             </div>
             <p class="title">Los Angeles</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -442,7 +442,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/dotcss-2019.jpg">
+              <img src="./img/dotcss-2019.jpg" alt="">
             </div>
             <p class="title">Mexico</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -455,7 +455,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/images.jpg">
+              <img src="./img/images.jpg" alt="">
             </div>
             <p class="title">Paris</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -465,7 +465,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png">
+              <img src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png" alt="">
             </div>
             <p class="title">Minsk</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -475,7 +475,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/access.jpg">
+              <img src="./img/access.jpg" alt="">
             </div>
             <p class="title">London</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -558,7 +558,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-1.jpeg">
+                  <img src="./img/ev-1.jpeg" alt="man on stage in front of a banner with text j s conf family">
                 </div>
               </div>
               <div class="card-footer">
@@ -583,7 +583,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-2.jpeg">
+                  <img src="./img/ev-2.jpeg" alt="man working on a laptop inside the crowd">
                 </div>
               </div>
               <div class="card-footer">
@@ -608,7 +608,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-3.jpeg">
+                  <img src="./img/ev-3.jpeg" alt="stage beeing filmed via phone">
                 </div>
               </div>
               <div class="card-footer">
@@ -635,7 +635,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-4.jpeg">
+                  <img src="./img/ev-4.jpeg" alt="people on stage participating in a discussion">
                 </div>
               </div>
               <div class="card-footer">
@@ -660,7 +660,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-5.jpeg">
+                  <img src="./img/ev-5.jpeg" alt="people dicussing something on stage overlayed with text choosing the appropriate technology">
                 </div>
               </div>
               <div class="card-footer">
@@ -685,7 +685,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-6.jpeg">
+                  <img src="./img/ev-6.jpeg" alt="crowd of people raising hands">
                 </div>
               </div>
               <div class="card-footer">
@@ -729,7 +729,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=300">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=300" alt="">
                   </p>
                 </div>
                 <div class="media-content">
@@ -751,7 +751,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=301">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=301" alt="">
                   </p>
                 </div>
                 <div class="media-content">
@@ -773,7 +773,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=302">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=302" alt="">
                   </p>
                 </div>
                 <div class="media-content">
@@ -795,7 +795,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=303">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=303" alt="">
                   </p>
                 </div>
                 <div class="media-content">
@@ -817,7 +817,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=304">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=304" alt="">
                   </p>
                 </div>
                 <div class="media-content">
@@ -839,7 +839,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=305">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=305" alt="">
                   </p>
                 </div>
                 <div class="media-content">
@@ -1123,14 +1123,14 @@
       <div class="card">
         <div class="card-image">
           <div class="image is-4by3">
-            <img src="https://source.unsplash.com/random/?sig=2">
+            <img src="https://source.unsplash.com/random/?sig=2" alt="random image">
           </div>
         </div>
         <div class="card-content">
           <div class="media">
             <div class="media-left">
               <div class="image is-48x48">
-                <img src="http://www.radfaces.com/images/avatars/linda-barret.jpg">
+                <img src="http://www.radfaces.com/images/avatars/linda-barret.jpg" alt="random image">
               </div>
             </div>
             <div class="media-content">
@@ -1158,7 +1158,7 @@
   <div id="modal-image1" class="modal modal-fx-3dSlit">
     <div class="modal-background"></div>
     <div class="modal-content is-huge is-image">
-      <img src="https://source.unsplash.com/random/?sig=1">
+      <img src="https://source.unsplash.com/random/?sig=1" alt="random image">
     </div>
     <button class="modal-close is-large"></button>
   </div>
@@ -1166,7 +1166,7 @@
   <div id="modal-image2" class="modal modal-fx-superScaled">
     <div class="modal-background"></div>
     <div class="modal-content  is-image">
-      <img src="https://source.unsplash.com/random/?sig=3">
+      <img src="https://source.unsplash.com/random/?sig=3" alt="random image">
     </div>
     <button class="modal-close is-large"></button>
   </div>
