add target to links

--- a/index.html
+++ b/index.html
@@ -311,23 +311,23 @@
       </div>
       <div class="tabs is-boxed is-centered main-menu" id="nav">
         <ul>
-          <li data-target="pane-1" id="1" tabindex="0" class="is-active">
-            <a href="https://www.google.com" target="_blank" title="open in new tab">
+          <li data-target="pane-1" id="1" class="is-active">
+            <div class="tab-section">
               <span class="icon is-small"><i class="fa fa-image"></i></span>
               <span>Pictures</span>
-            </a>
+            </div>
           </li>
           <li data-target="pane-2" id="2">
-            <a href="https://www.google.com" target="_blank" title="open in new tab">
+            <div class="tab-section">
               <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
               <span>Team</span>
-            </a>
+            </div>
           </li>
           <li data-target="pane-3" id="3">
-            <a href="https://www.google.com" target="_blank" title="open in new tab">
+            <div class="tab-section">
               <span class="icon is-small"><i class="fa fa-film"></i></span>
               <span>Video</span>
-            </a>
+            </div>
           </li>
         </ul>
       </div>
