--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       <div class="hero-body">
         <form class="container has-text-centered">
           <div class="column is-6 is-offset-3">
-            <h1 class="title has-text-white">
+            <h2 class="title has-text-white">
               We have web accessibility in mind
-            </h1>
+            </h2>
             <h2 class="subtitle has-text-white">
               Would you like to get the latest news?
             </h2>
@@ -93,10 +93,10 @@
                 <span class="visually-hidden"
                   >Would you like to get the latest news?</span
                 >
-                <input class="input" />
+                <input class="input" type="text" />
               </label>
 
-              <button class="control button is-dark">Notify Me</button>
+              <button class="control button is-info">Notify Me</button>
             </fieldset>
           </div>
         </form>
@@ -106,22 +106,23 @@
     <main>
       <section class="section" id="about">
         <div class="section-heading has-text-centered">
-          <div class="title is-2">About Us</div>
-          <div class="subtitle is-5">We of all trades, master of "some"</div>
+          <h2 class="title is-2">About Us</h2>
+          <p class="subtitle is-5">We of all trades, master of "some"</p>
           <div class="container">
             <p>
-              Web developers with more than <b>4 years</b> of well-rounded
-              experience with a degree in the field of <b>Computer Science</b>,
-              extensive knowledge of modern Web techniques and love for
-              <b>Coffee</b>. Looking for an opportunity to work and upgrade, as
-              well as being involved in an organization that believes in gaining
-              a competitive edge and giving back to the community.
+              Web developers with more than <strong>4 years</strong> of
+              well-rounded experience with a degree in the field of
+              <strong>Computer Science</strong>, extensive knowledge of modern
+              Web techniques and love for <strong>Coffee</strong>. Looking for
+              an opportunity to work and upgrade, as well as being involved in
+              an organization that believes in gaining a competitive edge and
+              giving back to the community.
             </p>
           </div>
         </div>
 
         <div class="content container">
-          <div class="is-1 title">Hello World</div>
+          <h1 class="is-1 title">Hello World</h1>
           <p>
             Lorem ipsum<sup><a href="#">[1]</a></sup> dolor sit amet,
             consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend
@@ -129,7 +130,7 @@
             Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel,
             interdum mattis neque. Sub<sub>script</sub> works as well!
           </p>
-          <div class="is-2 title">Second level</div>
+          <h2 class="is-2 title">Second level</h2>
           <p>
             Curabitur accumsan turpis pharetra <b>augue tincidunt</b> blandit.
             Quisque condimentum maximus mi, sit amet commodo arcu rutrum id.
@@ -138,17 +139,13 @@
             Ut et neque nisl.
           </p>
           <ul>
+            <li>In fermentum leo eu lectus mollis, quis dictum mi aliquet.</li>
+            <li>Morbi eu nulla lobortis, lobortis est in, fringilla felis.</li>
             <li>
-              - In fermentum leo eu lectus mollis, quis dictum mi aliquet.
-            </li>
-            <li>
-              - Morbi eu nulla lobortis, lobortis est in, fringilla felis.
-            </li>
-            <li>
-              - Aliquam nec felis in sapien venenatis viverra fermentum nec
+              Aliquam nec felis in sapien venenatis viverra fermentum nec
               lectus.
             </li>
-            <li>- Ut non enim metus.</li>
+            <li>Ut non enim metus.</li>
           </ul>
           <div class="is-3 title">Third level</div>
           <p>
@@ -219,10 +216,11 @@
             cursus non. Ut finibus eleifend arcu ut vehicula. Mauris eu est
             maximus est porta condimentum in eu justo. Nulla id iaculis sapien.
           </p>
+
           <table>
             <tr>
-              <td>Header</td>
-              <td>Header</td>
+              <th>Header</th>
+              <th>Header</th>
             </tr>
             <tr>
               <td>cell</td>
@@ -245,6 +243,7 @@
               <td>cell</td>
             </tr>
           </table>
+
           <p>
             Phasellus porttitor enim id metus volutpat ultricies. Ut nisi nunc,
             blandit sed dapibus at, vestibulum in felis. Etiam iaculis lorem ac
@@ -286,7 +285,7 @@
       <section class="hero has-background-grey-light">
         <div class="container features">
           <div class="section-heading has-text-centered">
-            <div class="title is-2">Three key features</div>
+            <h2 class="title is-2">Three key features</h2>
             <div class="subtitle is-5">We don't hide what we do</div>
           </div>
 
@@ -576,7 +575,7 @@
       <section class="section has-background-grey-lighter">
         <div class="container has-text-centered">
           <div class="section-heading has-text-centered">
-            <div class="title is-2">Upcoming events</div>
+            <h2 class="title is-2">Upcoming events</h2>
             <div class="subtitle is-5">
               Outcoming dates for the best options
             </div>
@@ -654,7 +653,7 @@
 
       <section class="section">
         <div class="section-heading has-text-centered">
-          <div class="title is-2">Services</div>
+          <h2 class="title is-2">Services</h2>
           <div class="subtitle is-5">What can I do for you?</div>
         </div>
         <div class="container">
@@ -705,7 +704,7 @@
       <section class="section has-background-grey-lighter">
         <div class="container">
           <div class="section-heading has-text-centered">
-            <div class="title is-2">Photos from past events</div>
+            <h2 class="title is-2">Photos from past events</h2>
           </div>
 
           <div class="container portfolio-container">
@@ -870,7 +869,7 @@
       <section class="section">
         <div class="container">
           <div class="section-heading has-text-centered">
-            <div class="title is-2">Forum</div>
+            <h2 class="title is-2">Forum</h2>
             <div class="subtitle is-5">
               Discuss any topic with no leaving this page
             </div>
@@ -1073,7 +1072,7 @@
       <section class="section has-background-light">
         <div class="container">
           <div class="section-heading has-text-centered">
-            <div class="title is-2">Contact us</div>
+            <h2 class="title is-2">Contact us</h2>
             <div class="subtitle is-5">Don't hesitate, ask anything</div>
           </div>
 
@@ -1288,7 +1287,7 @@
       <div class="container">
         <div class="columns">
           <div class="column is-3 is-offset-2">
-            <div class="is-3 title"><b>Lessons</b></div>
+            <h3 class="is-3 title"><b>Lessons</b></h3>
             <ul>
               <li><a href="#">Lorem ipsum dolor sit amet</a></li>
               <li><a href="#">Vestibulum errato isse</a></li>
@@ -1300,7 +1299,7 @@
             </ul>
           </div>
           <div class="column is-3">
-            <div class="is-3 title"><b>News</b></div>
+            <h3 class="is-3 title"><b>News</b></h3>
             <ul>
               <li><a href="#">Labore et dolore magna aliqua</a></li>
               <li><a href="#">Kanban airis sum eschelor</a></li>
@@ -1312,7 +1311,7 @@
             </ul>
           </div>
           <div class="column is-4">
-            <div class="is-3 title"><b>Help</b></div>
+            <h3 class="is-3 title"><b>Help</b></h3>
             <ul>
               <li><a href="#">Objects in space</a></li>
               <li><a href="#">Playing cards with coyote</a></li>
@@ -1324,12 +1323,12 @@
         </div>
 
         <div class="content has-text-centered">
-          <div class="soc">
+          <h3 class="soc">
             <a href="#"><i class="fab fa-github-alt fa-2x"></i></a>
             <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-          </div>
+          </h3>
           <p>
             The source code is licensed
             <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
